# Alm

./: .gitignore  Cargo.toml  README.md  scratch_diag.py
.almtmp/: .gitignore
.cargo/: config.toml
compute-bench/: .gitignore  README.md  benchmark.html  build.sh  elm.json  report.html  run.mjs  wasmgc-wins.html
compute-bench/src/: BinaryTrees.elm  DictOps.elm  ElmBench.elm  Fib.elm  FloatSum.elm  ListFilter.elm  ListFold.elm  ListMap.elm  (+4 more)
docs/: boxed-fallback.md  source-maps.md
dom-bench/: .gitignore  App.jsx  App.svelte  App_opt.jsx  Main.elm  Main_lazy.elm  README.md  build.mjs  build.sh  drive.mjs  elm.json  package.json  report.html  runner.js  shim.js
examples/: FizzBuzz.elm  dryft-compare-test.elm.txt
scratch_out/: PaackEng_paack-ui_7_23_0.txt  anmolitor_elm-protoc-utils_2_3_0.txt  arowM_elm-markdown-ast_1_0_6.txt  elmcraft_core-extra_2_3_0.txt  f_PaackEng_paack-ui_7_23_0.txt  f_intrepidshape_elm-web3-ui_2_3_0.txt  f_scrive_json-schema-form_2_0_0.txt  final.sh  lydell_elm-app-url_1_0_4.txt  owanturist_elm-graphql_5.0.0.txt  owanturist_elm-graphql_5_0_0.txt  r_arowM_elm-markdown-ast_1_0_6.txt  r_intrepidshape_elm-web3-ui_2_3_0.txt  r_jfmengels_elm-review-simplify_2_1_15.txt  reg_ce.txt  repro_gicentre_tidy_1_6_0.txt  repro_terezka_intervals_2_0_2.txt  rest.sh  rs2.txt  run_seq.sh  run_seq2.sh  scrive_json-schema-form_2_0_0.txt  thought2_elm-wikimedia-commons_1_0_1.txt  v_anmolitor_elm-protoc-utils_2_3_0.txt  v_owanturist_elm-graphql_5_0_0.txt  v_ozmat_elm-forms_2_0_1.txt  verify1.sh  vi_terezka_intervals_2_0_2.txt  vint.sh  vozmat.txt  vtidy.txt
(+271 files in other folders)
